--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ nav ul{
 nav a{
     text-decoration: none;
     font-size: calc(2px + 2vw);
-    border-bottom: 2px solid navy;
+    border: 2px solid navy;
 }
 
 main{
