Adding headshot image to home page

--- a/index.css
+++ b/index.css
@@ -16,6 +16,11 @@
     width: 100%;
 }
 
+#headshot{
+    display: block;
+    margin: auto;
+}
+
 header,footer{
     background-color: darkseagreen;
 
