--- a/index.css
+++ b/index.css
@@ -17,9 +17,9 @@
 }
 
 #headshot{
-    width: 50%;
-    display: block;
-    margin: auto;
+    max-width: 50%;
+    padding-left: 0;
+
 }
 
 header,footer{
