--- a/index.css
+++ b/index.css
@@ -19,8 +19,8 @@
 #headshot{
     display: inline;
     max-width: 30%;
-    padding-top: 10px;
-    padding-left: 10px;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
 header,footer{
@@ -36,15 +36,17 @@ nav{
 }
 
 nav ul{
-    padding-left: 0;
     list-style: none;
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
     margin: 0 auto;
+    padding: 50px 50px;
     text-align: center;
     text-decoration: none;
+    color: floralwhite;
+
 }
 
 nav a{
