--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ nav ul{
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    padding: 50px 50px;
+    padding: 100% 100%;
     text-align: center;
     text-decoration: none;
     color: floralwhite;
