--- a/index.css
+++ b/index.css
@@ -25,6 +25,7 @@
 }
 
 #intro{
+    margin-right: 60px;
     text-align: right;
 }
 header,footer{
@@ -44,6 +45,8 @@ nav ul{
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    padding-top: 5px;
+    padding-left: 0;
     text-align: center;
     text-decoration: none;
     justify-content: center;
