--- a/index.css
+++ b/index.css
@@ -25,8 +25,9 @@
 }
 
 #intro{
+    padding-top: 10px;
     margin-right: 60px;
-    text-align: right;
+    text-align: center;
 }
 header,footer{
     background-color: #fdbe7b;
