--- a/index.css
+++ b/index.css
@@ -26,8 +26,8 @@
 
 #intro{
     padding-top: 10px;
-    margin-right: 60px;
-    text-align: center;
+    margin-right: 80px;
+    text-align: right;
 }
 header,footer{
     background-color: #fdbe7b;
@@ -50,12 +50,13 @@ nav ul{
     padding-left: 0;
     text-align: center;
     text-decoration: none;
+    color: floralwhite;
     justify-content: center;
 
 }
 
 nav ul li{
-    color: floralwhite;
+    margin: 10 10px;
 
 }
 
