--- a/index.css
+++ b/index.css
@@ -25,8 +25,8 @@
 }
 
 #intro{
-    padding-top: 10px;
-    margin-right: 75px;
+    margin-top: 0;
+    margin-right: 80px;
     text-align: right;
 }
 header,footer{
@@ -59,6 +59,7 @@ nav ul li{
     margin: 10px 10px;
     padding: 10px;
     color: floralwhite;
+    flex: auto
 }
 
 nav a{
