--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ nav ul{
     text-align: center;
     text-decoration: none;
 
-    justify-content: center;
+    justify-content: space-evenly;
 
 }
 
@@ -59,7 +59,6 @@ nav ul li{
     margin: 10px 10px;
     padding: 10px;
     color: floralwhite;
-    flex: auto
 }
 
 nav a{
