--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ nav ul{
 }
 
 nav ul li{
-    margin: 10px 10px;
+    margin: 20px 10px;
 }
 
 nav a{
@@ -60,7 +60,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 20px;
+    padding: 20px 20px 20px 20px;
 }
 
 main{
