--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 20px 20px 20px 20px;
+    padding: 19% 20%;
 }
 
 main{
