--- a/index.css
+++ b/index.css
@@ -34,6 +34,14 @@ header,footer{
     text-align: left;
 }
 
+header{
+    border-bottom: 1px #395c6b;
+}
+
+footer{
+    border-top: 1px #395c6b;
+}
+
 nav{
     background-color: #c0d1e3;
     width: 30%;
