--- a/index.css
+++ b/index.css
@@ -19,8 +19,7 @@
 #headshot{
     display: inline;
     max-width: 30%;
-    padding-top: 20px;
-    padding-left: 20px;
+    padding: 20px 20px;
     text-align: left;
 }
 
@@ -53,7 +52,7 @@ nav ul{
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    padding-top: 2px;
+    padding-top: 1px;
     padding-left: 0;
     text-align: center;
     text-decoration: none;
