--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ nav a{
 main{
     background-color: #ffefd3;
     height: 100vh;
-    width: 70%;
+    width: 70vw;
 }
 
 /*Bellow this line is my mobile design*/
