--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@
 #container{
     display: flex;
     flex-direction: row;
+    height: 100vh;
     width: 100%;
     border-top: 4px solid #395c6b;
     border-bottom: 4px solid #395c6b;
@@ -74,7 +75,7 @@ nav a{
 main{
     background-color: #ffefd3;
     height: 100vh;
-    width: 70vw;
+    width: 70%;
 }
 
 /*Bellow this line is my mobile design*/
