--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 #container{
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     border-top: 4px solid #395c6b;
     border-bottom: 4px solid #395c6b;
