--- a/index.css
+++ b/index.css
@@ -42,6 +42,12 @@
     list-style: none;
 }
 
+.work{
+    padding-top: 10px;
+    padding-left: 20px;
+    list-style: none;
+}
+
 
 header,footer{
     background-color: #fdbe7b;
@@ -80,7 +86,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 19px 26px;
+    padding: 20px 26px;
 }
 
 main{
