--- a/index.css
+++ b/index.css
@@ -86,7 +86,8 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 20px 26px;
+    padding: 19px 26px;
+    margin: 1px 0;
 }
 
 main{
