Attempting to fix issues with work experience content page

--- a/index.css
+++ b/index.css
@@ -43,7 +43,6 @@
 }
 
 .work{
-    font-size:calc(2px + 2vw);
     padding-top: 10px;
     padding-left: 20px;
     list-style: none;
@@ -101,6 +100,8 @@ main{
 @media screen and (max-width:1000px){
     #container{
         flex-direction: column;
+        text-align: center;
+        height: 100vh;
     }
 
     header,footer{
