--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 19px 26px;
+    padding: 18px 26px;
 }
 
 main{
@@ -139,6 +139,7 @@ main{
     }
 
     main{
+        height:100vh;
         width: 100%;
     }
 
