--- a/index.css
+++ b/index.css
@@ -69,6 +69,7 @@
 }
 
 header,footer{
+    font-family: ;
     background-color: #fdbe7b;
     color: white;
     text-align: left;
@@ -109,6 +110,32 @@ main{
     height: 100vh;
     width: 70%;
 }
+
+/*Css classes for Google Font Gentium Book Plus*/
+.gentium-book-plus-regular {
+    font-family: "Gentium Book Plus", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.gentium-book-plus-bold {
+    font-family: "Gentium Book Plus", serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.gentium-book-plus-regular-italic {
+    font-family: "Gentium Book Plus", serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.gentium-book-plus-bold-italic {
+    font-family: "Gentium Book Plus", serif;
+    font-weight: 700;
+    font-style: italic;
+}
+/**********************************************/
 
 
 /*Bellow this line is my mobile design*/
