Adding font to header as test

--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@
 }
 
 header,footer{
-    font-family: ;
+    font-family: "Gentium Book Plus", cursive;
     background-color: #fdbe7b;
     color: white;
     text-align: left;
