--- a/index.css
+++ b/index.css
@@ -22,40 +22,41 @@
 #headshot{
     display: inline;
     max-width: 30%;
-    padding: 20px 20px;
+    padding: 20% 20%;
     text-align: left;
 }
 
 #intro{
     display: flex;
     text-align: left;
-    margin: 10px;
-    padding: 20px;
+    margin: 10%;
+    padding-top: 10%;
+    padding-left: 20%;
 }
 
 .contact{
-    padding-left: 20px;
+    padding-left: 20%;
 }
 
 .schools{
-    padding-top: 10px;
-    padding-left: 20px;
+    padding-top: 10%;
+    padding-left: 20%;
 }
 
 .work{
-    padding-top: 10px;
-    padding-left: 20px;
+    padding-top: 10%;
+    padding-left: 20%;
 }
 
 .leadership{
-    padding-top: 10px;
-    padding-left: 20px;
+    padding-top: 10%;
+    padding-left: 20%;
 }
 
 
 .certifications{
-    padding-top: 10px;
-    padding-left: 20px;
+    padding-top: 10%;
+    padding-left: 20%;
 }
 
 .certifications img{
@@ -64,20 +65,20 @@
 
 
 .references{
-    padding-top: 10px;
-    padding-left: 20px;
+    padding-top: 10%;
+    padding-left: 20%;
 }
 
 header,footer{
-    font-family: "Gentium Book Plus", cursive;
+    font-family: "Gentium Book Plus", serif;
     background-color: #fdbe7b;
     color: white;
     text-align: left;
-    padding-left: 10px;
+    padding-left: 10%;
 }
 
 footer{
-    padding: 10px;
+    padding: 10%;
 }
 
 nav{
@@ -102,7 +103,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 17px 26px;
+    padding: 17% 26%;
 }
 
 main{
