--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 #container{
     display: flex;
     flex-direction: row;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     border-top: 4px solid #395c6b;
     border-bottom: 4px solid #395c6b;
@@ -22,7 +22,7 @@
 #headshot{
     display: inline;
     max-width: 30%;
-    padding: 20% 20%;
+    padding: 5% 5%;
     text-align: left;
 }
 
@@ -31,26 +31,30 @@
     text-align: left;
     margin: 10%;
     padding-top: 10%;
-    padding-left: 20%;
+    padding-left: 10%;
 }
 
 .contact{
-    padding-left: 20%;
+    padding-left: 10%;
 }
 
 .schools{
     padding-top: 10%;
-    padding-left: 20%;
+    padding-left: 15%;
+}
+
+.schools h3{
+    padding: 5% 5%;
 }
 
 .work{
-    padding-top: 10%;
-    padding-left: 20%;
+    padding-top: 5%;
+    padding-left: 10%;
 }
 
 .leadership{
-    padding-top: 10%;
-    padding-left: 20%;
+    padding-top: 5%;
+    padding-left: 10%;
 }
 
 
@@ -74,7 +78,7 @@ header,footer{
     background-color: #fdbe7b;
     color: white;
     text-align: left;
-    padding-left: 10%;
+    padding-left: 5%;
 }
 
 footer{
@@ -103,7 +107,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 17% 26%;
+    padding: 10% 20%;
 }
 
 main{
