--- a/index.css
+++ b/index.css
@@ -83,9 +83,9 @@ main{
 #intro{
     display: flex;
     text-align: left;
-    margin: 10%;
-    padding-top: 10%;
-    padding-left: 10%;
+    margin: 2%;
+    padding-top: 5%;
+    padding-left: 5%;
 }
 
 .contact{
@@ -95,25 +95,33 @@ main{
 
 /*edu.html elements*/
 .schools{
-    padding-top: 10%;
-    padding-left: 15%;
+    padding-top: 2%;
+    padding-left: 5%;
 }
 
 .schools h3{
-    padding: 5% 5%;
+    padding: 2% 2%;
 }
 /************************************/
 
 
 /*exp.html elements*/
-.work{
+.work h3{
+    padding: 2% 2%;
+}
+
+.work p{
     padding-top: 5%;
     padding-left: 10%;
 }
 /***********************************/
 
 /*leadership-exp.html elements*/
-.leadership{
+.leadership h3{
+    padding: 2% 2%;
+}
+
+.leadership p{
     padding-top: 5%;
     padding-left: 10%;
 }
@@ -121,8 +129,8 @@ main{
 
 /*certs.html elements*/
 .certifications{
-    padding-top: 10%;
-    padding-left: 20%;
+    padding-top: 5%;
+    padding-left: 10%;
 }
 
 .certifications img{
@@ -132,13 +140,27 @@ main{
 
 /*refs.html elements*/
 .references{
-    padding-top: 10%;
-    padding-left: 20%;
+    padding-top: 2%;
+    padding-left: 5%;
+}
+
+.references h3{
+    padding: 2% 2%;
+}
+
+.references p{
+    margin: 2%;
 }
 /******************************/
 
 /*proj.html elements*/
+.projects{
+    padding: 2% 2%;
+}
 
+#calculator{
+    align-items: center;
+}
 /*****************************/
 
 /*Css classes for Google Font Gentium Book Plus*/
