--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ header p{
 }
 
 footer{
-    padding: 5% 2%;
+    padding: 2% 2%;
 }
 
 nav{
@@ -84,7 +84,7 @@ main{
     display: flex;
     text-align: left;
     margin: 2%;
-    padding-top: 5%;
+    padding-top: 0;
     padding-left: 5%;
 }
 
@@ -101,6 +101,14 @@ main{
 
 .schools h3{
     padding: 2% 2%;
+}
+
+.schools h4{
+    padding-left: 5%;
+}
+
+.schools p{
+    padding-right: 2%;
 }
 /************************************/
 
@@ -122,8 +130,9 @@ main{
 }
 
 .leadership p{
-    padding-top: 5%;
-    padding-left: 10%;
+    margin: 1%;
+    padding-top: 2%;
+    padding-left: 5%;
 }
 /*********************************/
 
@@ -145,9 +154,12 @@ main{
 }
 
 .references h3{
-    padding: 2% 2%;
+    padding: 2% 1%;
 }
 
+.references ul{
+    padding-left: 4%;
+}
 .references p{
     margin: 2%;
 }
