--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@ main{
 #headshot{
     display: inline;
     max-width: 30%;
-    padding: 5% 0 1% 5%;
+    padding: 5% 0 0 5%;
     text-align: left;
 }
 
@@ -84,8 +84,7 @@ main{
     display: flex;
     text-align: left;
     margin: 2%;
-    padding-top: 0;
-    padding-left: 5%;
+    padding:4% 0 0 4%;
 }
 
 .contact{
@@ -119,8 +118,7 @@ main{
 }
 
 .work p{
-    padding-top: 5%;
-    padding-left: 10%;
+    padding: 2% 2% 0 5%;
 }
 /***********************************/
 
