--- a/index.css
+++ b/index.css
@@ -83,8 +83,8 @@ main{
 #intro{
     display: flex;
     text-align: left;
-    margin: 2%;
-    padding:4% 0 0 4%;
+    margin-bottom: 2%;
+    padding:4% 0 0 2%;
 }
 
 .contact{
@@ -117,8 +117,12 @@ main{
     padding: 2% 2%;
 }
 
+.work ul{
+    margin-bottom: 2%;
+}
+
 .work p{
-    padding: 2% 2% 0 5%;
+    padding: 0 2% 0 5%;
 }
 /***********************************/
 
@@ -127,15 +131,22 @@ main{
     padding: 2% 2%;
 }
 
+.leadership ul{
+    margin-bottom: 2%;
+}
+
 .leadership p{
     margin: 1%;
-    padding-top: 2%;
     padding-left: 5%;
 }
 /*********************************/
 
 /*certs.html elements*/
-.certifications{
+.certifications h3{
+    padding: 2% 2%;
+}
+
+.certifications ul{
     padding-top: 5%;
     padding-left: 10%;
 }
@@ -169,7 +180,9 @@ main{
 }
 
 #calculator{
+    padding: 5% 5%;
     align-items: center;
+    border: 4px solid #395c6b;
 }
 /*****************************/
 
