--- a/index.css
+++ b/index.css
@@ -17,7 +17,6 @@
     height: 100vh;
     width: 100%;
     border-top: 4px solid #395c6b;
-    border-bottom: 4px solid #395c6b;
 }
 
 header,footer{
@@ -37,6 +36,7 @@ header p{
 
 footer{
     padding: 2% 2%;
+    border-top: 4px solid #395c6b;
 }
 
 nav{
@@ -61,7 +61,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 5% 10%;
+    padding: 70vh 10vw;
 }
 
 main{
