--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 70vh 10vw;
+    padding: 70% 10%;
 }
 
 main{
