--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 10% 10%;
+    padding: 3% 10%;
 }
 
 main{
@@ -122,7 +122,7 @@ main{
 }
 
 .work p{
-    padding: 0 2% 0 5%;
+    padding: 2% 2% 2% 5%;
 }
 /***********************************/
 
