--- a/index.css
+++ b/index.css
@@ -203,8 +203,8 @@ nav a{
     align-items: center;
     justify-content: center;
 
-    height: 40vh;
-    width: 40%;
+    height: 50vh;
+    width: 50%;
     border: 4px solid #395c6b;
     border-radius: 15px;
 
@@ -219,15 +219,12 @@ nav a{
     justify-content: center;
 
     height: 35%;
-    width: 25px;
+    width: 25%;
 }
 
-#one, #two{
+input{
     margin-top: 10%;
     background-color: #adb7c1;
-
-
-
 
 }
 
@@ -237,13 +234,29 @@ nav a{
 
     grid-template-columns:auto auto auto;
     grid-template-rows: auto auto auto;
+    gap: 5%;
+    padding-bottom: 4%;
+}
 
-    margin-top: 5%;
-    margin-bottom: 5%;
+#calc-buttons button{
+    background-color: #244369;
+    color: #d5d7d6;
+    border-radius: 5px;
+    border: solid 2px #3c4961;
+
 }
 
 #result{
-    background-color: #adb7c1;
+    height:15%;
+    width: 15%;
+    background-color: #2b4651;
+    border: none;
+    border-radius: 15px;
+    justify-content: center;
+}
+
+#output{
+    text-align: center;
 }
 /*****************************/
 
