--- a/index.css
+++ b/index.css
@@ -56,6 +56,7 @@ footer{
 nav{
     background-color: #c0d1e3;
     width: 30%;
+
 }
 
 nav ul{
@@ -66,6 +67,7 @@ nav ul{
     padding-left: 0;
     text-align: center;
     text-decoration: none;
+
 }
 
 nav a{
@@ -75,7 +77,8 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 5% 5%;
+    padding: 8% 8%;
+    align-content: stretch;
 }
 
 
@@ -218,8 +221,8 @@ nav a{
     align-items: center;
     justify-content: center;
 
-    height: 35%;
-    width: 25%;
+    height: 25%;
+    width: 20%;
 }
 
 input{
@@ -236,6 +239,8 @@ input{
     grid-template-rows: auto auto auto;
     gap: 5%;
     padding-bottom: 4%;
+    height: 35%;
+    width: 40%;
 }
 
 #calc-buttons button{
@@ -252,12 +257,13 @@ input{
     background-color: #2b4651;
     border: none;
     border-radius: 15px;
+
+    align-items: center;
     justify-content: center;
+
+    align-content: center;
 }
 
-#output{
-    text-align: center;
-}
 /*****************************/
 
 /*Css classes for Google Font Gentium Book Plus*/
